solved allowing some overflow of a div using flex-wrap

--- a/odin_library/styles.css
+++ b/odin_library/styles.css
@@ -31,10 +31,10 @@
 }
 
 .addBook{
-    /* border: 2px solid green; */
+    border: 2px solid green;
     width: 100%;
     text-align: center;
-    height: 88%;
+    height: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -126,16 +126,17 @@ form input[type=text]:focus{
     border: 2px solid red;
     height: 100%;
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(5, 20%);
-    align-items: center;
-    justify-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /* position: absolute; */
+   
 }
 
 .newBooks div{
     border: 2px solid black;
-    min-width: 80%;
-    min-height: 90%;
+    min-width: 30%;
+    min-height: 40%;
     background-color: white;
     border-radius: 12px;
 }
